# TelegramStart

./: pyproject.toml
src/: main.py
src/core/: commands.py  config.py
src/handlers/: fsm_questionnaire.py  fsm_smple.py  start.py
src/keyboards/: all_kb.py  inline_kbs.py
src/utils/: make_faker.py  utils.py
